
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-churn-predictor"
version = "0.1.0"
description = "Predict churn risk from lifecycle, engagement, and support signals and expose top drivers for retention teams."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
